--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<meta name="google-site-verification" content="BcsaTQjL0L9lWgi8Wq5EwWNhnUkGmnSgmnLKgu7AoZc" /><!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -167,3 +167,4 @@ That purpose remains its strength.
 
 </body>
 </html>
+
