--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="google-site-verification" content="BcsaTQjL0L9lWgi8Wq5EwWNhnUkGmnSgmnLKgu7AoZc" /><!DOCTYPE html>
+<meta name="google-site-verification" content="BcsaTQjL0L9lWgi8Wq5EwWNhnUkGmnSgmnLKgu7AoZc" />
 <title>A Complete Gateway to the Surahs of the Quran</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -167,5 +168,6 @@ That purpose remains its strength.
 
 </body>
 </html>
+
 
 
